# projectcandle

./: .gitignore  .readthedocs.yml  manage.py  pyproject.toml  requirements.txt
ai/: actions.py  candle_ai_env.py  constants.py  envtest.py  eval.py  logic.py  targeting.py  timestep.py
candle/: asgi.py  settings.py  urls.py  wsgi.py
config/gunicorn/: dev.py
docs/source/: conf.py  index.rst
forum/: admin.py  forms.py  models.py  urls.py  views.py
forum/migrations/: 0001_initial.py  0002_auto_20210810_1126.py  0003_auto_20210916_1157.py
forum/templates/: makepost.html  showcat.html  showpost.html
players/: admin.py  balance.py  constants.py  context_processors.py  forms.py  logic.py  managers.py  models.py  namegens.py  permissions.py  projects.py  serializers.py  strings.py  tests.py  tokens.py  traits.csv  urls.py  views.py
players/migrations/: 0001_initial.py  0002_auto_20200723_1216.py  0003_auto_20201114_1112.py  0004_auto_20201114_1156.py  0005_auto_20201114_1315.py  0006_auto_20201114_1625.py  0007_character_gender.py  0008_auto_20210402_1246.py  0009_auto_20210402_1258.py  0010_auto_20210402_1305.py  0011_auto_20210403_1719.py  0012_auto_20210504_2005.py  0013_auto_20210810_1126.py  0014_auto_20210901_1055.py  0015_auto_20210916_1157.py  0016_auto_20211004_1054.py
players/templates/: char_template.html  (+10 more)
templates/: base.html  home.html  logout.html  signup.html
war/: apps.py
world/: admin.py  constants.py  context_processors.py  forms.py  logic.py  models.py  projects.py  serializers.py  strings.py  tests.py  timestep.py  urls.py  views.py
(+43 files in other folders)
