[tool.poetry]
name = "projectcandle"
version = "0.1.0"
description = ""
authors = ["SilentWrangler"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
django = "^4.1.2"
sphynx = "^0.0.3"
gunicorn = "^20.1.0"
python-dotenv = "^0.21.0"
django-precise-bbcode = "^1.2.15"
django-rest-framework = "^0.1.0"
mysql = "^0.0.3"
mysql-connector = "^2.2.9"
pynames = "^0.2.4"
setuptools = "^65.5.0"
torch = "^2.3.0"
numpy = "^1.26.4"
gymnasium = "^0.29.1"
pettingzoo = "^1.24.3"
stable-baselines3 = "^2.3.2"
supersuit = "^3.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
